*Moved classes into corresponding packages *Removed unused SensorDataWrapper class *Added JSONDoc for documentation *Moved get data by sensorId to SensorData Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
-spring.datasource.url= jdbc:postgresql://54.213.174.46:5432/weather_station
+#Database configuration
+spring.datasource.url= jdbc:postgresql://52.43.169.194:5432/weather_station
 spring.datasource.username=devtestadmin
 spring.datasource.password=devtestguild
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
+
+#JSONDoc configuration
+jsondoc.version=1.0
+jsondoc.basePath=http://localhost:8080
+jsondoc.packages[0]=com.devtestguild.weatherstation
+jsondoc.playgroundEnabled=true
+jsondoc.displayMethodAs=URI
