Changed database and jsondoc source to localhost

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Database configuration
-spring.datasource.url= jdbc:postgresql://52.43.169.194:5432/weather_station
+spring.datasource.url= jdbc:postgresql://localhost:5432/weather_station
 spring.datasource.username=devtestadmin
 spring.datasource.password=devtestguild
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=validate
 
 #JSONDoc configuration
 jsondoc.version=1.0
-jsondoc.basePath=http://52.43.169.194:8080
+jsondoc.basePath=http://localhost:8080
 jsondoc.packages[0]=com.devtestguild.weatherstation
 jsondoc.playgroundEnabled=true
 jsondoc.displayMethodAs=URI
