--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=validate
 
 #JSONDoc configuration
 jsondoc.version=1.0
-jsondoc.basePath=http://localhost:8080
+jsondoc.basePath=http://weatherstation.devtestguild.nl
 jsondoc.packages[0]=com.devtestguild.weatherstation
 jsondoc.playgroundEnabled=true
 jsondoc.displayMethodAs=URI
