--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,5 @@
-#Database configuration
-spring.datasource.url= jdbc:postgresql://localhost:5432/weather_station
-spring.datasource.username=devtestadmin
-spring.datasource.password=devtestguild
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=validate
-
-#spring.datasource.url= ${SPRING_DATASOURCE_URL}
-#spring.datasource.username=${SPRING_DATASOURCE_USER}
-#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-#spring.jpa.properties.hibernate.dialect = ${SPRING_JPA_DIALECT}
-#spring.jpa.hibernate.ddl-auto=${SPRING_JPA_DDL_AUTO}
-#spring.datasource.driverClassName=${SPRING_DATASOURCE_DRIVERCLASSNAME}
+#Active profile
+spring.profiles.active=prd
 
 #JSONDoc configuration
 jsondoc.version=1.0
