--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -3,5 +3,6 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/weather_station
 spring.datasource.username=devtestadmin
 spring.datasource.password=devtestguild
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
